# token-economics-calculator

./: .gitignore  LICENSE  README.md  pyproject.toml
calculator/: __init__.py  batch_inference.py  breakeven.py  caching_savings.py  cost_model.py  price_shock.py  pricing.py
examples/: therapy_bot_cost_model.json  therapy_bot_demo.py
templates/: Token_Economics_Template.xlsx
tests/: test_cost_model.py  test_price_shock.py
